# FixPalAI

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  fixpal_ui_improved.py  main.py
src/: __init__.py
src/agents/: __init__.py  coordinator.py  rag_agent.py  safety_validation.py  vision_analysis.py
src/agents/specialists/: __init__.py  registry.py  router.py
src/evaluation/: __init__.py  eval_agent.py
src/ingestion/: __init__.py  manuals.py
src/services/: __init__.py  chunker.py  dedalus_wrapper.py  document_loader.py  embeddings.py  llm_utils.py  vector_store.py
src/ui/: README.md  fixpalai.jsx
