[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fixpalai"
version = "0.1.0"
description = "Intelligent multi-agent system for home repair diagnosis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "openai>=1.0.0",
    "streamlit>=1.28.0",
    "chromadb>=0.4.0",
    "langchain-chroma>=0.1.0",
    "pinecone-client>=3.0.0",
    "pymupdf>=1.23.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "gtts>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Repository = "https://github.com/your-org/fixpalai"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
